--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/amqplib": "^0.10.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
+    "amqplib": "^0.10.3",
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "jest": "^29.5.0",
