--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/amqplib": "^0.10.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
+    "@types/sinon": "^10.0.15",
     "amqplib": "^0.10.3",
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "jest": "^29.5.0",
     "pg-promise": "^11.4.3",
+    "sinon": "^15.1.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
